# pit30m

./: .dockerignore  .gitignore  CITATION.cff  LICENSE  README.md  all_logs.txt  dev-cuda.Dockerfile  dev.Dockerfile  no_wgs84_in_original.txt  pyproject.toml
.github/workflows/: ci.yaml  isort.yaml  lint.yaml
examples/: blogpost_00_compression.ipynb  get_log_lidar_imu_ext.py  plot_open3d.py  plot_partitions.ipynb  tutorial_00_introduction.ipynb
pit30m/: __init__.py  all_logs.txt  camera.py  cli.py  config.py  fs_util.py  indexing.py  indexing_test.py  monkeywrench.bak.py  monkeywrench.py  time_utils.py  util.py
pit30m/data/: log_reader.py  partitions.py  submap.py  submap_indexing.py  submap_test.py  submap_utm.pkl
pit30m/examples/: blogpost_00_compression.ipynb  environment.yml  plot_open3d.py  tutorial_00_introduction.ipynb
pit30m/pit30m/: camera.py  cli.py  fs_util.py  indexing.py  monkeywrench.py
pit30m/pit30m/data/: log_reader.py  submap.py
pit30m/pit30m/torch/: dataset.py  dataset_test.py
pit30m/torch/: dataset.py  dataset_test.py
tests/: cli_integration_test.py  indexing_test.py  submap_test.py
tests/data/: log_reader_integration_test.py  partitions_test.py
