[tool.poetry]
name = "pit30m"
version = "0.1.0"
description = "Development kit for the Pit30M dataset"
authors = ["Andrei Bârsan"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Robot Framework :: Library",
    "Framework :: Robot Framework :: Tool",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.10"
fsspec = "^2022"
s3fs = "^2022"
geopandas = "^0.12"
pygeos = "^0.14"
numpy = "^1.24"
fire = "^0.5"
joblib = "^1"
pillow = "^9"
tqdm = "^4"
lz4 = "^4.3"
matplotlib = "^3.7"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-mock = "*"
ipdb = "^0.13"
black = "^23.1"
pytest-xdist = "^3.2"
# TODO(andrei): Special group and special build for these optional deps.
torch = "^1.13"
torchdata = "^0.5"
pylint = "^2.16"
boto3 = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
# Exceptions for invalid names
good-names = "f,fs,e,err"
# Disable missing docstring warnings
disable = "missing-function-docstring,missing-module-docstring,missing-class-docstring"

[tool.black]
line-length = 120 # override black's default line-length
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

